--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="zh-TW">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script src="./public/js/loadCSS.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109448670-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -20,103 +19,22 @@
     <meta property="og:title" content="Neji's Resume">
     <meta property="og:description" content="Hi, 我是世鵬">
     <meta property="og:image" content="http://neji0924.github.io/public/images/me.jpg">
-    <script type="text/javascript">
+    <script async type="text/javascript">
+        /* ------------------------------- *
+         *             loadCSS             *
+         * ------------------------------- */
+        function loadCSS(href){var ss = window.document.createElement('link'),ref =window.document.getElementsByTagName('head')[0];ss.rel = 'stylesheet';ss.href = href;ss.media = 'only x';ref.parentNode.insertBefore(ss,ref);setTimeout( function(){ss.media = 'all';}, 0);}
         loadCSS("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css");
         loadCSS("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css");
         loadCSS("https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css");
         loadCSS("./public/css/app.css");
     </script>
     <style type="text/css">
-#loading {
-    background-color: #fff;
-    display: block;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-}
+        /* ------------------------------- *
+         *             loading             *
+         * ------------------------------- */
 
-#loading > #loader {
-    position: absolute;
-    top: 50%;
-    margin-top: -75px;
-    width: 100%;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Nunito', sans-serif;
-    font-size: 4.6875em;
-    color: transparent;
-    letter-spacing: 0.01em;
-}
-
-#loading > #loader > span {
-  text-shadow: 0 0 2px rgba(204, 208, 212, 0.9),
-               0 15px 25px rgba(0, 0, 0, 0.3),
-               0 -2px 3px rgba(0, 0, 0, 0.1),
-               0 -5px 10px rgba(255, 255, 255, 0.5),
-               0 5px 10px rgba(0, 0, 0, 0.3),
-               0 3px 4px rgba(255, 255, 255, 0.2),
-               0 0 20px rgba(255, 255, 255, 0.45);
-    -webkit-animation: loading 0.85s ease-in-out infinite alternate;
-    animation: loading 0.85s ease-in-out infinite alternate;
-}
-
-#loading > #loader > span:nth-child(2) {
-    -webkit-animation-delay: .1s;
-    animation-delay: .1s;
-}
-
-#loading > #loader > span:nth-child(3) {
-    -webkit-animation-delay: .2s;
-    animation-delay: .2s;
-}
-
-#loading > #loader > span:nth-child(4) {
-    -webkit-animation-delay: .3s;
-    animation-delay: .3s;
-}
-
-#loading > #loader > span:nth-child(5) {
-    -webkit-animation-delay: .4s;
-    animation-delay: .4s;
-}
-
-#loading > #loader > span:nth-child(6) {
-    -webkit-animation-delay: .5s;
-    animation-delay: .5s;
-}
-
-#loading > #loader > span:nth-child(7) {
-    -webkit-animation-delay: .6s;
-    animation-delay: .6s;
-}
-
-@-webkit-keyframes loading {
-  to {
-        text-shadow: 0 0 2px rgba(204, 208, 212, 0.2),
-                     0 0 3px rgba(0, 0, 0, 0.02),
-                     0 0 0 transparent,
-                     0 0 0 rgba(255, 255, 255, 0),
-                     0 0 0 transparent,
-                     0 0 0 rgba(255, 255, 255, 0),
-                     0 0 0 rgba(255, 255, 255, 0);
-    }
-}
-
-@keyframes loading {
-    to {
-        text-shadow: 0 0 2px rgba(204, 208, 212, 0.2),
-                     0 0 3px rgba(0, 0, 0, 0.02),
-                     0 0 0 transparent,
-                     0 0 0 rgba(255, 255, 255, 0),
-                     0 0 0 transparent,
-                     0 0 0 rgba(255, 255, 255, 0),
-                     0 0 0 rgba(255, 255, 255, 0);
-    }
-}
-
+        .fp-enabled body,html.fp-enabled{margin:0;padding:0;overflow:hidden;-webkit-tap-highlight-color:transparent}.fp-section{position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.fp-slide{float:left}.fp-slide,.fp-slidesContainer{height:100%;display:block}.fp-slides{z-index:1;height:100%;overflow:hidden;position:relative;-webkit-transition:all .3s ease-out;transition:all .3s ease-out}.fp-section.fp-table,.fp-slide.fp-table{display:table;table-layout:fixed;width:100%}.fp-tableCell{display:table-cell;vertical-align:middle;width:100%;height:100%}.fp-slidesContainer{float:left;position:relative}.fp-controlArrow{-webkit-user-select:none;-moz-user-select:none;-khtml-user-select:none;-ms-user-select:none;position:absolute;z-index:4;top:50%;cursor:pointer;width:0;height:0;border-style:solid;margin-top:-38px;-webkit-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}#fp-nav,.fp-slidesNav{opacity:1;-webkit-transform:translate3d(0,0,0)}.fp-controlArrow.fp-prev{left:15px;width:0;border-width:38.5px 34px 38.5px 0;border-color:transparent #fff transparent transparent}.fp-controlArrow.fp-next{right:15px;border-width:38.5px 0 38.5px 34px;border-color:transparent transparent transparent #fff}.fp-scrollable{overflow:hidden;position:relative}.fp-scroller{overflow:hidden}.iScrollIndicator{border:0!important}.fp-notransition{-webkit-transition:none!important;transition:none!important}#fp-nav{position:fixed;z-index:100;margin-top:-32px;top:50%}#fp-nav.right{right:17px}#fp-nav.left{left:17px}.fp-slidesNav{position:absolute;z-index:4;-ms-transform:translate3d(0,0,0);transform:translate3d(0,0,0);left:0!important;right:0;margin:0 auto!important}.fp-slidesNav.bottom{bottom:17px}.fp-slidesNav.top{top:17px}#fp-nav ul,.fp-slidesNav ul{margin:0;padding:0}#fp-nav ul li,.fp-slidesNav ul li{display:block;width:14px;height:13px;margin:7px;position:relative}.fp-slidesNav ul li{display:inline-block}#fp-nav ul li a,.fp-slidesNav ul li a{display:block;position:relative;z-index:1;width:100%;height:100%;cursor:pointer;text-decoration:none}#fp-nav ul li a.active span,#fp-nav ul li:hover a.active span,.fp-slidesNav ul li a.active span,.fp-slidesNav ul li:hover a.active span{height:12px;width:12px;margin:-6px 0 0 -6px;border-radius:100%}#fp-nav ul li a span,.fp-slidesNav ul li a span{border-radius:50%;position:absolute;z-index:1;height:4px;width:4px;border:0;background:#333;left:50%;top:50%;margin:-2px 0 0 -2px;-webkit-transition:all .1s ease-in-out;-moz-transition:all .1s ease-in-out;-o-transition:all .1s ease-in-out;transition:all .1s ease-in-out}#fp-nav ul li:hover a span,.fp-slidesNav ul li:hover a span{width:10px;height:10px;margin:-5px 0 0 -5px}#fp-nav ul li .fp-tooltip{position:absolute;top:-2px;color:#fff;font-size:14px;font-family:arial,helvetica,sans-serif;white-space:nowrap;max-width:220px;overflow:hidden;display:block;opacity:0;width:0;cursor:pointer}#fp-nav ul li:hover .fp-tooltip,#fp-nav.fp-show-active a.active+.fp-tooltip{-webkit-transition:opacity .2s ease-in;transition:opacity .2s ease-in;width:auto;opacity:1}#fp-nav ul li .fp-tooltip.right{right:20px}#fp-nav ul li .fp-tooltip.left{left:20px}.fp-auto-height .fp-slide,.fp-auto-height .fp-tableCell,.fp-auto-height.fp-section,.fp-responsive .fp-auto-height-responsive .fp-slide,.fp-responsive .fp-auto-height-responsive .fp-tableCell,.fp-responsive .fp-auto-height-responsive.fp-section{height:auto!important}#loading{background-color:#fff;display:block;position:fixed;top:0;bottom:0;left:0;right:0;z-index:9999}#loading>#loader{position:absolute;top:50%;margin-top:-75px;width:100%;text-align:center;text-transform:uppercase;font-family:Nunito,sans-serif;font-size:4.6875em;color:transparent;letter-spacing:.01em}#loading>#loader>span{text-shadow:0 0 2px rgba(204,208,212,.9),0 15px 25px rgba(0,0,0,.3),0 -2px 3px rgba(0,0,0,.1),0 -5px 10px rgba(255,255,255,.5),0 5px 10px rgba(0,0,0,.3),0 3px 4px rgba(255,255,255,.2),0 0 20px rgba(255,255,255,.45);-webkit-animation:loading .85s ease-in-out infinite alternate;animation:loading .85s ease-in-out infinite alternate}#loading>#loader>span:nth-child(2){-webkit-animation-delay:.1s;animation-delay:.1s}#loading>#loader>span:nth-child(3){-webkit-animation-delay:.2s;animation-delay:.2s}#loading>#loader>span:nth-child(4){-webkit-animation-delay:.3s;animation-delay:.3s}#loading>#loader>span:nth-child(5){-webkit-animation-delay:.4s;animation-delay:.4s}#loading>#loader>span:nth-child(6){-webkit-animation-delay:.5s;animation-delay:.5s}#loading>#loader>span:nth-child(7){-webkit-animation-delay:.6s;animation-delay:.6s}@-webkit-keyframes loading{to{text-shadow:0 0 2px rgba(204,208,212,.2),0 0 3px rgba(0,0,0,.02),0 0 0 transparent,0 0 0 rgba(255,255,255,0),0 0 0 transparent,0 0 0 rgba(255,255,255,0),0 0 0 rgba(255,255,255,0)}}@keyframes loading{to{text-shadow:0 0 2px rgba(204,208,212,.2),0 0 3px rgba(0,0,0,.02),0 0 0 transparent,0 0 0 rgba(255,255,255,0),0 0 0 transparent,0 0 0 rgba(255,255,255,0),0 0 0 rgba(255,255,255,0)}}
     </style>
 </head>
 <body class="animated fadeIn">
