profile add animate

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
         <div class="section animate" id="profile">
             <div class="col-sm-3 text-center">
-                <img class="user-img" data-src="./public/images/me.jpg">
+                <img class="user-img animated" data-src="./public/images/me.jpg">
             </div>
             <div class="col-sm-9 text-left">
-<pre>
+<pre class="animated">
     {
         "name": "陳世鵬",
         "age": 27,
