--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
         </div>
         <div class="section animate" id="profile">
             <div class="col-sm-3 text-center">
-                <img class="user-img animated" data-src="./public/images/me.jpg">
+                <div class="col-sm-12">
+                    <img class="user-img animated" data-src="./public/images/me.jpg">
+                </div>
+                <div id="connect-menu" class="col-sm-12">
+                    <a href="https://github.com/neji0924" target="_blank">
+                        <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://codepen.io/neji0924" target="_blank">
+                        <i class="fa fa-codepen fa-3x" aria-hidden="true"></i>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-9 text-left">
 <pre class="animated">
