connect add animate

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col-sm-12">
                     <img class="user-img animated" data-src="./public/images/me.jpg">
                 </div>
-                <div id="connect-menu" class="col-sm-12">
+                <div id="connect-menu" class="col-sm-12 animated">
                     <a href="https://github.com/neji0924" target="_blank">
                         <i class="fa fa-github-alt fa-3x" aria-hidden="true"></i>
                     </a>
