調整簡報架構

--- a/briefing/teaching/gulp.html
+++ b/briefing/teaching/gulp.html
@@ -6,9 +6,9 @@
 
 		<title>gulp教學</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="../css/reveal.css">
+		<link rel="stylesheet" href="../css/theme/black.css">
+		<link rel="stylesheet" href="../lib/css/zenburn.css">
 
 	</head>
 	<body>
@@ -212,8 +212,8 @@ mix.sass('{aaa,bbb}.scss') // 有在這裏面的
 			</div>
 		</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+		<script src="../lib/js/head.min.js"></script>
+		<script src="../js/reveal.js"></script>
 
 		<script>
 			// More info about config & dependencies:
