--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         "phone number": "0911960764",
         "education": "國立高雄應用科技大學-資訊管理系",
         "experience": [
-            "竹貓星球數位股份有限公司(2016/11 ~ 2017/6)",
-            "日康科技有限公司(2017/7 ~ Now)"
+            "日康科技有限公司(2017/7 ~ 2018/6)",
+            "竹貓星球數位股份有限公司(2016/11 ~ 2017/6)"
         ]
     }
 </pre> 
@@ -110,11 +110,10 @@
                         <h3>前端</h3>
                     </div>
                     <ul class="list-group text-center">
-                        <li class="list-group-item"> JQuery</li>
-                        <li class="list-group-item"> Bootstrap</li>
-                        <li class="list-group-item"> RWD</li>
-                        <li class="list-group-item"> HTML5</li>
-                        <li class="list-group-item"> CSS/SCSS</li>
+                        <li class="list-group-item"> JQuery </li>
+                        <li class="list-group-item"> Vue.js </li>
+                        <li class="list-group-item"> RWD </li>
+                        <li class="list-group-item"> CSS/SCSS </li>
                     </ul>
                    
                 </div>
@@ -122,12 +121,14 @@
             <div class="col-sm-3 text-center animated">
                 <div class="panel panel-warning panel-pricing">
                     <div class="panel-heading">
-                        <h3>資料庫</h3>
+                        <h3>資料庫/WebServer</h3>
                     </div>
                     
                     <ul class="list-group text-center">
-                        <li class="list-group-item"> MySQL</li>
-                        <li class="list-group-item"> ERD</li>
+                        <li class="list-group-item"> MySQL </li>
+                        <li class="list-group-item"> MariaDB </li>
+                        <li class="list-group-item"> Nginx </li>
+                        <li class="list-group-item"> Apache </li>
                     </ul>
                 </div>
             </div>
@@ -140,7 +141,7 @@
                     <ul class="list-group text-center">
                         <li class="list-group-item"> Git</li>
                         <li class="list-group-item"> Gulp</li>
-                        <li class="list-group-item"> NPM / YARN</li>
+                        <li class="list-group-item"> npm / Yarn</li>
                     </ul>
                 </div>
             </div>
